--- a/apps/frontend/src/app/components/booking/bookableSummary/bookableSummary.scss
+++ b/apps/frontend/src/app/components/booking/bookableSummary/bookableSummary.scss
@@ -4,7 +4,7 @@
   background: rgb(232, 232, 232);
   display: flex;
   box-shadow: 5px 5px 5px rgb(187, 187, 187);
-  margin-top: 20px;
+  margin: 20px 0 30px 0;
   .bookableImage {
     width: 150px;
     height: 120px;
