--- a/apps/frontend/src/app/components/booking/dateTime/dateTime.scss
+++ b/apps/frontend/src/app/components/booking/dateTime/dateTime.scss
@@ -3,3 +3,12 @@
   align-items: center;
   flex-direction: column;
 }
+
+.backToAppointments {
+  color: black;
+  margin-bottom: 30px;
+  text-decoration: none;
+  background: rgb(232, 232, 232);
+  padding: 8px;
+  border-radius: 5px;
+}
